--- a/_includes/themes/caveman/default.html
+++ b/_includes/themes/caveman/default.html
@@ -13,6 +13,7 @@
 
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href='http://fonts.googleapis.com/css?family=Racing+Sans+One' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
