--- a/assets/themes/caveman/css/style.css
+++ b/assets/themes/caveman/css/style.css
@@ -32,7 +32,8 @@ h1,h2,h3 {
      -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
           box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
-
+ul{list-style:none;}
+ul,ol{padding:0;margin:0 0 9px -10px;}
 /* Page header tweaks */
 .page-header {
   padding: 20px 20px 10px;
